name: bibtex-clean
version: 0.1.0.0
-- synopsis:
-- description:
license: AllRightsReserved
author: Ozgur Akgun
maintainer: ozgurakgun@gmail.com
-- copyright:
-- category:
build-type: Simple
-- extra-source-files:
cabal-version: >=1.10

executable bibtex-clean
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: Main.hs
    build-depends: base, bibtex == 0.1.*, parsec
    ghc-options:
        -Wall
