name: bibtex-clean
version: 0.1.0.0
synopsis: Reads bibtex entries from stdin, and writes a "clean" version of all entries to stdout.
license: PublicDomain
author: Ozgur Akgun
maintainer: ozgurakgun@gmail.com
copyright: 2013 Ozgur Akgun
build-type: Simple
cabal-version: >=1.10

executable bibtex-clean
    default-language: Haskell2010
    hs-source-dirs: src
    main-is: Main.hs
    build-depends: base, bibtex >= 0.1.0, parsec, MissingH >= 1.2.0
    ghc-options:
        -Wall
